--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
+    "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "@mui/x-data-grid": "^7.21.0",
+    "@tailwindcss/forms": "^0.3.4",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
@@ -31,6 +33,7 @@
     "react-table": "7.8.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
+    "tailwindcss": "^3.4.14",
     "yup": "1.1.1"
   },
   "scripts": {
