--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "@mui/x-data-grid": "^7.21.0",
+    "@react-google-maps/api": "^2.20.3",
     "@tailwindcss/forms": "^0.3.4",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
@@ -34,6 +35,7 @@
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "tailwindcss": "^3.4.14",
+    "use-places-autocomplete": "^4.0.1",
     "yup": "1.1.1"
   },
   "scripts": {
